tests/snapshots/html_test__html_doc_files_rewrite-19.snap
---
source: tests/html_test.rs
expression: "files.get(\"page.css\").unwrap()"
---
.sticky{position:sticky}.top-0{top:0}.z-50{z-index:50}.block{display:block}.\!flex{display:flex!important}.flex{display:flex}.h-14{height:3.5rem}.h-full{height:100%}.flex-1{flex:1}.items-center{align-items:center}.justify-between{justify-content:space-between}.gap-0{gap:0}.gap-0\.5{gap:.125rem}.gap-2{gap:.5rem}.gap-2\.5{gap:.625rem}.gap-4{gap:1rem}.overflow-hidden{overflow:hidden}.text-ellipsis{text-overflow:ellipsis}.whitespace-nowrap{white-space:nowrap}.rounded{border-radius:.25rem}.rounded-lg{border-radius:.5rem}.border{border-width:1px}.border-gray-300{--tw-border-opacity:1;border-color:rgb(209 213 219/var(--tw-border-opacity))}.bg-transparent{background-color:#0000}.bg-white{--tw-bg-opacity:1;background-color:rgb(255 255 255/var(--tw-bg-opacity))}.px-2{padding-left:.5rem;padding-right:.5rem}.px-2\.5{padding-left:.625rem;padding-right:.625rem}.px-3{padding-left:.75rem;padding-right:.75rem}.py-2{padding-top:.5rem;padding-bottom:.5rem}.py-3{padding-top:.75rem;padding-bottom:.75rem}.text-sm{font-size:.875rem;line-height:1.25rem}.text-xs{font-size:.75rem;line-height:1rem}.italic{font-style:italic}.leading-none{line-height:1}.text-stone-400{--tw-text-opacity:1;color:rgb(168 162 158/var(--tw-text-opacity))}.blur{--tw-blur:blur(8px);filter:var(--tw-blur)var(--tw-brightness)var(--tw-contrast)var(--tw-grayscale)var(--tw-hue-rotate)var(--tw-invert)var(--tw-saturate)var(--tw-sepia)var(--tw-drop-shadow)}.ddoc{grid-template-columns:repeat(6,minmax(0,1fr));align-items:flex-start;gap:1.5rem;padding-left:1rem;padding-right:1rem}@media not all and (min-width:1024px){.ddoc{padding-top:1rem}}@media (min-width:768px){.ddoc{padding-left:2rem;padding-right:2rem}}@media (min-width:1024px){.ddoc{padding-left:2.5rem;padding-right:2.5rem;display:grid}}@media (min-width:1280px){.ddoc{padding-left:3.5rem;padding-right:3.5rem}}@media (min-width:1024px){.ddoc:not(:has(>div.toc)),.ddoc:has(>div.toc)>div:not(.toc){padding-top:1rem}}.ddoc>.toc{margin-top:0!important;padding-top:0!important}@media not all and (min-width:1024px){.ddoc>.toc{display:none!important}}@media (min-width:1024px){.ddoc>.toc{grid-column:1/span 1!important}}.ddoc>.toc h3{padding-top:.75rem!important}.ddoc>div:not(.toc){grid-column:span 5/span 5}#content{grid-template-columns:repeat(1,minmax(0,1fr));gap:2rem;margin-top:1rem;display:grid}@media (min-width:1024px){#content{grid-template-columns:repeat(4,minmax(0,1fr));gap:3rem}}#content>main{grid-column:1/-1;min-width:0;padding-bottom:1rem}@media (min-width:768px){#content>main{padding-bottom:2rem}}@media (min-width:1024px){#content>main{padding-bottom:3rem}#content:has(.toc)>main{grid-column:span 3/span 3;grid-row-start:1}}.toc{box-sizing:border-box;flex-direction:column;row-gap:1rem;margin-top:-3.5rem;padding-top:3.5rem;display:flex}@media not all and (min-width:1024px){.toc{grid-row-start:1}}@media (min-width:1024px){.toc{grid-column:span 1/-1;height:-moz-fit-content;height:fit-content;max-height:100vh;position:sticky;top:0}}.toc>div{max-height:100%}@media (min-width:1024px){.toc>div{overflow-y:auto}}.toc>div>:last-child{padding-bottom:1rem}#searchResults{--tw-bg-opacity:1;background-color:rgb(255 255 255/var(--tw-bg-opacity));display:none;position:absolute;inset:0}.hover\:bg-stone-100:hover{--tw-bg-opacity:1;background-color:rgb(245 245 244/var(--tw-bg-opacity))}@media not all and (min-width:1024px){.max-lg\:flex{display:flex}}@media not all and (min-width:768px){.max-md\:flex-col-reverse{flex-direction:column-reverse}}@media (min-width:768px){.md\:items-center{align-items:center}}@media (min-width:1024px){.lg\:col-\[span_1_\/_-1\]{grid-column:span 1/-1}.lg\:col-span-3{grid-column:span 3/span 3}.lg\:grid{display:grid}.lg\:grid-cols-4{grid-template-columns:repeat(4,minmax(0,1fr))}.lg\:gap-12{gap:3rem}}
